--- a/buttons.html
+++ b/buttons.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
             <meta content="width=device-width, initial-scale=1.0" name="viewport">
                 <title>
-                    Tables
+                    Buttons
                 </title>
                 <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
             </meta>
@@ -31,10 +31,6 @@
                     <button class="btn btn-sm btn-outline-dark">Submit SM Dark</button>
                 </div>
             </div>
-
-
-          
-
         </div>
     </body>
 </html>
