--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-            <meta content="width=device-width, initial-scale=1.0" name="viewport">
-                <title>
-                    bootstrap home
-                </title>
-                <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
-                    <link href="css/main.css" rel="stylesheet">
-                    </link>
-                </link>
-            </meta>
-        </meta>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <title>bootstrap home</title>
+        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -39,7 +33,7 @@
                         <img alt="" src="https://picsum.photos/50/50">
                         </img>
                     </a>
-                    <button aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navCollapse" data-toggle="collapse" type="button">
+                    <button aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navCollapse" data-bs-toggle="collapse" type="button">
                         <span class="navbar-toggler-icon">
                         </span>
                     </button>
@@ -150,8 +144,7 @@
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Dolorem nulla tempore, aspernatur, velit magnam eum. Voluptatum optio nostrum, totam libero, exercitationem consectetur tempore, ut perferendis corporis eius modi blanditiis quas. ctetur adipisicing, elit. Dolorem nulla tempore, aspernatur, velit magnam eum. Voluptatum optio nostrum, totam libero, exercitationem consectetur tempore, ut perferendis corporis eius modi blanditiis quas.
             </p>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         </div>
-        <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
-        </script>
     </body>
 </html>
